--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,16 +1,17 @@
-CTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AirBnB clone</title>
-</head>
-<body style="margin:0; padding:0;">
-    <header style="background-color: #FF0000; height:70px; width:100%;"></header>
-    <footer style="background-color: #00ff00; height:60px; width:100%; position: absolute; bottom:0; display: flex; text-align: center; align-items: center; justify-content: center;">
-    <p>Best School</p>
-    </footer>
-    
-</body>
+	<head>
+		<title>
+			AirBnB clone
+		</title>
+	</head>
+	<body style="margin:0px; padding:0px;">
+		<header style="background-color:#FF0000; height:70px; width:100%;">
+		</header>
+		<footer style="position:fixed; bottom:0; background-color:#00FF00; height:60px; width:100%; text-align:center; line-height:30px;">
+			<p>
+				Holberton School
+			</p>
+		</footer>
+	</body>
 </html>
-
