--- a/index.html
+++ b/index.html
@@ -2,16 +2,22 @@
 <html lang="en">
 	<head>
 		<title>
-			AirBnB clone
+			AirBNB Clone
 		</title>
-		<link rel="stylesheet" href="web_static/styles/3-common.css"/>
+		<link rel="stylesheet" href="web_static/styles/4-common.css"/>
 		<link rel="stylesheet" href="web_static/styles/3-header.css"/>
 		<link rel="stylesheet" href="web_static/styles/3-footer.css"/>
+		<link rel="stylesheet" href="web_static/styles/4-filters.css"/>
 		<link rel="icon" href="web_static/images/icon.png">
 	</head>
 	<body>
 		<header>
 		</header>
+		<div class="container">
+			<section class="filters">
+				<button type="button">Search</button>
+			</section>
+		</div>
 		<footer>
 			<p>
 				Best School
