--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -22,14 +22,14 @@
 					<ul class="popover">
 						<li><h2>Arizona:</h2></li>
                         			<li>
-                            				<ul>
+                            				<ul class="inside">
                                 				<li>Page</li>
                                 				<li>Page2</li>
                             				</ul>
                         			</li>
                         			<li><h2>California:</h2></li>
                         			<li>
-                                			<ul>
+                                			<ul class="inside">
                                     				<li>San Francisco</li>
                                     				<li>Los Altos</li>
                                 			</ul>
