--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 		<title>
 			AirBNB Clone
 		</title>
-		<link rel="stylesheet" href="web_static/styles/4-common.css"/>
-		<link rel="stylesheet" href="web_static/styles/3-header.css"/>
-		<link rel="stylesheet" href="web_static/styles/3-footer.css"/>
-		<link rel="stylesheet" href="web_static/styles/6-filters.css"/>
-		<link rel="icon" href="web_static/images/icon.png">
+		<link rel="stylesheet" href="styles/4-common.css"/>
+		<link rel="stylesheet" href="styles/3-header.css"/>
+		<link rel="stylesheet" href="styles/3-footer.css"/>
+		<link rel="stylesheet" href="styles/5-filters.css"/>
+		<link rel="icon" href="images/icon.png">
 	</head>
 	<body>
 		<header>
@@ -19,32 +19,10 @@
 				<div class="locations">
 					<h3>States</h3>
 					<h4>California, Arizona...</h4>
-					<ul class="popover">
-						<li><h2>Arizona:</h2></li>
-                        			<li>
-                            				<ul class="inside">
-                                				<li>Page</li>
-                                				<li>Page2</li>
-							</ul>
-                        			</li>
-                        			<li><h2>California:</h2></li>
-                        			<li>
-                                			<ul class="inside">
-                                    				<li>San Francisco</li>
-                                    				<li>Los Altos</li>
-                                			</ul>
-                            			</li>
-                    			</ul>
 				</div>
 				<div class="amenities">
 					<h3>Amenities</h3>
 					<h4>Internet, Kitchen...</h4>
-					<ul class="popover">
-                        			<li>Internet</li>
-                        			<li>TV</li>
-                        			<li>Kitchen</li>
-                        			<li>Iron</li>
-                    			</ul>
 				</div>
 			</section>
 		</div>
