--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="styles/3-header.css"/>
 		<link rel="stylesheet" href="styles/3-footer.css"/>
 		<link rel="stylesheet" href="styles/6-filters.css"/>
-		<link rel="stylesheet" href="styles/7-places.css"/>
+		<link rel="stylesheet" href="styles/100-places.css"/>
 		<link rel="icon" href="images/icon.png">
 	</head>
 	<body>
@@ -59,12 +59,15 @@
 					</div>
 					<div class="information">
 						<div class="max_guest">
+							<div class="icon_group"></div>
 							2 Guests
 						</div>
 						<div class="number_rooms">
+							<div class="icon_bed"></div>
 							1 Bedroom
 						</div>
 						<div class="number_bathrooms">
+							<div class="icon_bath"></div>
 							1 Bathroom
 						</div>
 					</div>
@@ -81,25 +84,19 @@
                                                 <h2>Amenities</h2>
                                                 <ul>
                                                         <li>
-                                                                <ul>
-                                                                        i
-                                                                </ul>
+                                                                <div class="icon_tv"></div>
                                                                 <ul>
                                                                         TV
                                                                 </ul>
                                                         </li>
                                                         <li>
-                                                                <ul>
-                                                                        i
-                                                                </ul>
+                                                                <div class="icon_wifi"></div>
                                                                 <ul>
                                                                         wifi
                                                                 </ul>
                                                         </li>
                                                         <li>
-                                                                <ul>
-                                                                        i
-                                                                </ul>
+                                                                <div class="icon_pet"></div>
                                                                 <ul>
                                                                         Pets friendly
                                                                 </ul>
@@ -110,13 +107,17 @@
                                                 <h2>Reviews</h2>
                                                 <ul>
                                                         <li>
-                                                                <h3>From Bob Dylan the 27th January 2017</h3>
-                                                                <p>Runshi is an epic host. Nothing more i can say. 5 star!</p>
-                                                        </li>
+								<div>
+                                                                	<h3>From Bob Dylan the 27th January 2017</h3>
+                                                                	<p>Runshi is an epic host. Nothing more i can say. 5 star!</p>
+                                                        	</div>
+							</li>
                                                         <li>
-                                                                <h3>From Connor 4th January 2017</h3>
-                                                                <p>Higly recommended!</p>
-                                                        </li>
+                                                                <div>
+									<h3>From Connor 4th January 2017</h3>
+                                                                	<p>Higly recommended!</p>
+                                                        	</div>
+							</li>
                                                 </ul>
                                         </div>
                     		</article>
@@ -127,12 +128,15 @@
                                         </div>
                                         <div class="information">
                                                 <div class="max_guest">
+							<div class="icon_group"></div>
                                                         4 Guests
                                                 </div>
                                                 <div class="number_rooms">
+							<div class="icon_bed"></div>
                                                         2 Bedrooms
                                                 </div>
                                                 <div class="number_bathrooms">
+							<div class="icon_bath"></div>
                                                         1 Bathroom
                                                 </div>
                                         </div>
@@ -153,9 +157,7 @@
                                                 <h2>Amenities</h2>
                                                 <ul>
                                                         <li>
-                                                                <ul>
-                                                                        i
-                                                                </ul>
+                                                                <div class="icon_pet"></div>
                                                                 <ul>
                                                                         Pets friendly
                                                                 </ul>
@@ -166,9 +168,11 @@
                                                 <h2>Reviews</h2>
                                                 <ul>
                                                         <li>
-                                                                <h3>From Max the 22th January 2017</h3>
-                                                                <p>Runshi is an epic host. Nothing more i can say. 5 star!</p>
-                                                        </li>
+								<div>
+                                                                	<h3>From Max the 22th January 2017</h3>
+                                                                	<p>Runshi is an epic host. Nothing more i can say. 5 star!</p>
+                                                        	</div>
+							</li>
                                                 </ul>
                                         </div>
                     		</article>
@@ -179,12 +183,15 @@
                                         </div>
                                         <div class="information">
                                                 <div class="max_guest">
+							<div class="icon_group"></div>
                                                         6 Guests
                                                 </div>
                                                 <div class="number_rooms">
+							<div class="icon_bed"></div>
                                                         3 Bedrooms
                                                 </div>
                                                 <div class="number_bathrooms">
+							<div class="icon_bath"></div>
                                                         2 Bathroom
                                                 </div>
                                         </div>
@@ -201,25 +208,19 @@
 						<h2>Amenities</h2>
 						<ul>
               						<li>
-								<ul>
-									i
-								</ul>
+								<div class="icon_tv"></div>
 								<ul>
 									TV
 								</ul>
                 				        </li>
 							<li>
-								<ul>
-									i
-								</ul>
+								<div class="icon_wifi"></div>
 								<ul>
 									wifi
 								</ul>
               						</li>
             						<li>
-								<ul>
-									i
-								</ul>
+								<div class="icon_pet"></div>
 								<ul>
 									Pets friendly
 								</ul>
@@ -230,8 +231,10 @@
 						<h2>Reviews</h2>
 						<ul>
 							<li>
-								<h3>From Connor 4th January 2017</h3>
-								<p>Higly recommended!</p>
+								<div>
+									<h3>From Connor 4th January 2017</h3>
+									<p>Higly recommended!</p>
+								</div>
 							</li>
 						</ul>
 					</div>
