--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="styles/3-header.css"/>
 		<link rel="stylesheet" href="styles/3-footer.css"/>
 		<link rel="stylesheet" href="styles/6-filters.css"/>
-		<link rel="stylesheet" href="styles/7-places.css"/>
+		<link rel="stylesheet" href="styles/8-places.css"/>
 		<link rel="icon" href="images/icon.png">
 	</head>
 	<body>
@@ -59,12 +59,15 @@
 					</div>
 					<div class="information">
 						<div class="max_guest">
+							<div class="icon_group"></div>
 							2 Guests
 						</div>
 						<div class="number_rooms">
+							<div class="icon_bed"></div>
 							1 Bedroom
 						</div>
 						<div class="number_bathrooms">
+							<div class="icon_bath"></div>
 							1 Bathroom
 						</div>
 					</div>
@@ -85,12 +88,15 @@
                                         </div>
                                         <div class="information">
                                                 <div class="max_guest">
+							<div class="icon_group"></div>
                                                         4 Guests
                                                 </div>
                                                 <div class="number_rooms">
+							<div class="icon_bed"></div>
                                                         2 Bedrooms
                                                 </div>
                                                 <div class="number_bathrooms">
+							<div class="icon_bath"></div>
                                                         1 Bathroom
                                                 </div>
                                         </div>
@@ -115,12 +121,15 @@
                                         </div>
                                         <div class="information">
                                                 <div class="max_guest">
+							<div class="icon_group"></div>
                                                         6 Guests
                                                 </div>
                                                 <div class="number_rooms">
+							<div class="icon_bed"></div>
                                                         3 Bedrooms
                                                 </div>
                                                 <div class="number_bathrooms">
+							<div class="icon_bath"></div>
                                                         2 Bathroom
                                                 </div>
                                         </div>
@@ -143,4 +152,3 @@
 		</footer>
 	</body>
 </html>
-
